--- a/style.css
+++ b/style.css
@@ -65,30 +65,43 @@ img {
 /* ---Your code starts here--- */
 
 nav {
+  position: fixed;
   /* všimni si, že při scrollování obsahem stránky navigace zůstává na vrchu viewportu  */
 }
 
 main {
-  /* zajisti, aby navigace nepřekrývala obsah. Navigace je vysoká 40px*/
+  position: relative;
+  top: 42px;
 }
 
 .travel {
+  position: sticky;
+  top: 50px;
   /* tento div při scrollování neodjede s obsahem, ale přilepí 10px pod navigací (50px od vrchu obsahu) */
 }
 
-.picture {
-  /* je potřeba zajistit, abychom mohli přesunout popisek obrázku do pravého horního rohu obrázku */
+figcaption {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  /* popisek obrázku se nachází přímo na obrázku, 10px shora a 10px zprava */
 }
 
-.picture-description {
-  /* popisek obrázku se nachází přímo na obrázku, 10px shora a 10px zprava */
+.lake,
+.tree {
+  position: relative;
 }
 
 .mountains,
 .sea {
+  position: relative;
+  left: 450px;
   /* obrázky hor a moře jsou zleva odsunuty o 450px */
 }
 
 .chat {
+  position: fixed;
+  right: 10px;
+  bottom: 10px;
   /* malého chatbota na stránce vidíme pořád. Visí vpravo dole, 10px od okrajů */
 }
